[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["nornir_pyre*"]

[project]
name = "nornir_pyre"
version = "1.5.0"
authors = [
	{ name="James Anderson", email="james.r.anderson@utah.edu" },
	{ name="Drew Ferrell", email="" },
]
description = "Python Image Registration Tool"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.15.0",
	"scipy>=1.1.0",
	"matplotlib",
	"pyglet>=1.3.2",
	"nornir_pools @ git+https://github.com/clementsan/nornir-pools.git@dev",
	"nornir_shared @ git+https://github.com/clementsan/nornir-shared.git@dev",
	"nornir_imageregistration @ git+https://github.com/clementsan/nornir-imageregistration.git@dev",
	"PyOpenGL>=3.0",
	"pillow>=2.3",
	"wxPython>=4.0"
]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",  
]

[project.optional-dependencies]
PyOpenGL = ["PyOpenGL-accelerate"]

[project.gui-scripts]
pyre = "pyre.__main__:main"

[project.urls]
Homepage = "https://github.com/clementsan/nornir-pyre"
Issues = "https://github.com/clementsan/nornir-pyre/issues"
